--- a/package.json
+++ b/package.json
@@ -6,11 +6,17 @@
     "@aws-amplify/ui-react": "^0.2.9",
     "aws-amplify": "^3.0.18",
     "aws-amplify-react": "^4.1.18",
+    "axios": "^0.19.2",
     "bootstrap": "3.4.1",
     "chartist": "0.10.1",
+    "express": "^4.17.1",
     "node-sass": "4.12.0",
+    "nodemon": "^2.0.4",
     "react": "^16.8.6",
     "react-bootstrap": "0.32.4",
+    "react-bootstrap-table-next": "^4.0.3",
+    "react-bootstrap-table2-filter": "^1.3.3",
+    "react-bootstrap-table2-paginator": "^2.1.2",
     "react-chartist": "0.13.3",
     "react-dom": "16.8.6",
     "react-google-maps": "9.4.5",
