--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.19.2",
     "bootstrap": "3.4.1",
     "chartist": "0.10.1",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "node-sass": "4.12.0",
     "nodemon": "^2.0.4",
