--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "aws-amplify": "^3.0.18",
     "aws-amplify-react": "^4.1.18",
     "axios": "^0.19.2",
+    "body-parser": "^1.19.0",
     "bootstrap": "3.4.1",
     "chartist": "0.10.1",
     "cors": "^2.8.5",
