--- a/package.json
+++ b/package.json
@@ -3,37 +3,37 @@
   "version": "1.3.0",
   "private": true,
   "dependencies": {
-    "@aws-amplify/ui-react": "^0.2.9",
-    "aws-amplify": "^3.0.18",
-    "aws-amplify-react": "^4.1.18",
+    "@aws-amplify/ui-react": "^0.2.12",
+    "aws-amplify": "^3.0.21",
+    "aws-amplify-react": "^4.1.20",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
-    "bootstrap": "3.4.1",
-    "chartist": "0.10.1",
+    "bootstrap": "4.5.0",
+    "chartist": "0.11.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "node-sass": "4.12.0",
+    "node-sass": "4.14.1",
     "nodemon": "^2.0.4",
-    "react": "^16.8.6",
-    "react-bootstrap": "0.32.4",
+    "react": "^16.13.1",
+    "react-bootstrap": "^0.32.4",
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-filter": "^1.3.3",
     "react-bootstrap-table2-paginator": "^2.1.2",
-    "react-chartist": "0.13.3",
-    "react-dom": "16.8.6",
+    "react-chartist": "0.14.3",
+    "react-dom": "16.13.1",
     "react-google-maps": "9.4.5",
-    "react-modal": "^3.11.2",
-    "react-notification-system": "0.2.17",
-    "react-router": "5.0.0",
-    "react-router-dom": "5.0.0",
-    "react-scripts": "3.0.0",
-    "react-toggle": "4.0.2"
+    "react-model": "^3.1.4",
+    "react-notification-system": "0.4.0",
+    "react-router": "5.2.0",
+    "react-router-dom": "5.2.0",
+    "react-scripts": "3.4.1",
+    "react-toggle": "4.1.1"
   },
   "devDependencies": {
-    "@types/googlemaps": "3.30.19",
+    "@types/googlemaps": "3.39.11",
     "@types/markerclustererplus": "2.1.33",
-    "@types/react": "16.8.13",
-    "typescript": "3.4.3"
+    "@types/react": "16.9.43",
+    "typescript": "3.9.7"
   },
   "scripts": {
     "start": "npx react-scripts start",
